Bug 243877 - Picasaweb tool crashes when active video upload removed
Summary: Picasaweb tool crashes when active video upload removed
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-WebService-Google (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-07 20:10 UTC by elyk53
Modified: 2018-02-04 22:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description elyk53 2010-07-07 20:10:03 UTC
Application: digikam (1.2.0)
KDE Platform Version: 4.4.4 (KDE 4.4.4)
Qt Version: 4.6.3
Operating System: Linux 2.6.32-2-amd64 x86_64
Distribution: Debian GNU/Linux testing (squeeze)

-- Information about the crash:
About 150 photos and videos were queued and in the process of uploading to a picasaweb album. I removed several videos (their uploads were consistently failing...but that's a different issue that I haven't isolated to digikam or picasaweb) from the upcoming queue by selecting each one and clicking the minus button. This crash occurred immediately after selecting the video currently being uploaded and clicking the button to remove it from the list.

 -- Backtrace:
Application: digiKam (digikam), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f032ac3f7c0 (LWP 25646))]

Thread 20 (Thread 0x7f03154c8710 (LWP 25665)):
#0  0x00007f032183616c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f032425ee8b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00000000006e205b in ?? ()
#3  0x00007f032425de35 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#5  0x00007f032351b01d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 19 (Thread 0x7f0311bf4710 (LWP 25916)):
#0  0xffffffffff600132 in ?? ()
#1  0x00007fff7ddff6fb in ?? ()
#2  0x00007f031bacbe7f in clock_gettime () from /lib/librt.so.1
#3  0x00007f0324373b9f in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f032437899d in ?? () from /usr/lib/libQtCore.so.4
#5  0x00007f03243789c5 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00007f032437695d in ?? () from /usr/lib/libQtCore.so.4
#7  0x00007f0324376a05 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007f031fb7cca1 in g_main_context_prepare () from /lib/libglib-2.0.so.0
#9  0x00007f031fb7d108 in ?? () from /lib/libglib-2.0.so.0
#10 0x00007f031fb7d6ec in g_main_context_iteration () from /lib/libglib-2.0.so.0
#11 0x00007f0324376766 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#12 0x00007f032434ba82 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#13 0x00007f032434be5c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#14 0x00007f032425b79b in QThread::exec() () from /usr/lib/libQtCore.so.4
#15 0x00007f032425de35 in ?? () from /usr/lib/libQtCore.so.4
#16 0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#17 0x00007f032351b01d in clone () from /lib/libc.so.6
#18 0x0000000000000000 in ?? ()

Thread 18 (Thread 0x7f0310dd4710 (LWP 25917)):
#0  0x00007f0321833f0f in pthread_mutex_lock () from /lib/libpthread.so.0
#1  0x00007f031fb7b3f7 in g_main_context_release () from /lib/libglib-2.0.so.0
#2  0x00007f031fb7d2cb in ?? () from /lib/libglib-2.0.so.0
#3  0x00007f031fb7d6ec in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0x00007f0324376766 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007f032434ba82 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007f032434be5c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0x00007f032425b79b in QThread::exec() () from /usr/lib/libQtCore.so.4
#8  0x00007f032425de35 in ?? () from /usr/lib/libQtCore.so.4
#9  0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#10 0x00007f032351b01d in clone () from /lib/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 17 (Thread 0x7f030bfff710 (LWP 25918)):
#0  0x00007f032183616c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f032425ee8b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f0327c1e8b2 in Digikam::LoadSaveThread::run() () from /usr/lib/libdigikamcore.so.1
#3  0x00007f032425de35 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#5  0x00007f032351b01d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 16 (Thread 0x7f030b7fe710 (LWP 25919)):
#0  0x00007f0323510103 in poll () from /lib/libc.so.6
#1  0x00007f031fb7d299 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007f031fb7d6ec in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x00007f0324376766 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x00007f032434ba82 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007f032434be5c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007f032425b79b in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x00007f032425de35 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#9  0x00007f032351b01d in clone () from /lib/libc.so.6
#10 0x0000000000000000 in ?? ()

Thread 15 (Thread 0x7f030affd710 (LWP 25920)):
#0  0x00007f0323510103 in poll () from /lib/libc.so.6
#1  0x00007f031fb7d299 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007f031fb7d6ec in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x00007f0324376766 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x00007f032434ba82 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007f032434be5c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007f032425b79b in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x00007f032425de35 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#9  0x00007f032351b01d in clone () from /lib/libc.so.6
#10 0x0000000000000000 in ?? ()

Thread 14 (Thread 0x7f030442b710 (LWP 25924)):
#0  0x00007f03218364d9 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f0308c42f41 in ?? () from /usr/lib/libxine.so.1
#2  0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#3  0x00007f032351b01d in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 13 (Thread 0x7f0304c2c710 (LWP 25925)):
#0  0x00007f03235148b3 in select () from /lib/libc.so.6
#1  0x00007f0308c6ba15 in xine_usec_sleep () from /usr/lib/libxine.so.1
#2  0x00007f0308c508e9 in ?? () from /usr/lib/libxine.so.1
#3  0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#4  0x00007f032351b01d in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 12 (Thread 0x7f02e0a72710 (LWP 25926)):
#0  0x00007f032183546e in __pthread_mutex_unlock_usercnt () from /lib/libpthread.so.0
#1  0x00007f031fb7c8f1 in g_main_context_check () from /lib/libglib-2.0.so.0
#2  0x00007f031fb7d2b3 in ?? () from /lib/libglib-2.0.so.0
#3  0x00007f031fb7d6ec in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0x00007f0324376766 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007f032434ba82 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007f032434be5c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0x00007f032425b79b in QThread::exec() () from /usr/lib/libQtCore.so.4
#8  0x00007f0308e9e400 in ?? () from /usr/lib/qt4/plugins/phonon_backend/phonon_xine.so
#9  0x00007f032425de35 in ?? () from /usr/lib/libQtCore.so.4
#10 0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#11 0x00007f032351b01d in clone () from /lib/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 11 (Thread 0x7f02e0068710 (LWP 25930)):
#0  0x00007f0323510103 in poll () from /lib/libc.so.6
#1  0x00007f02e006d805 in ?? () from /usr/lib/xine/plugins/1.28/xineplug_ao_out_alsa.so
#2  0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#3  0x00007f032351b01d in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 10 (Thread 0x7f02df867710 (LWP 25931)):
#0  0x00007f032183616c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f0308c53a3b in ?? () from /usr/lib/libxine.so.1
#2  0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#3  0x00007f032351b01d in clone () from /lib/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 9 (Thread 0x7f02dd1c1710 (LWP 25935)):
#0  0xffffffffff600132 in ?? ()
#1  0x00007fff7ddff6fb in ?? ()
#2  0x00007f031bacbe7f in clock_gettime () from /lib/librt.so.1
#3  0x00007f0324373b9f in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f032437899d in ?? () from /usr/lib/libQtCore.so.4
#5  0x00007f03243789c5 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00007f032437695d in ?? () from /usr/lib/libQtCore.so.4
#7  0x00007f0324376a05 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007f031fb7cca1 in g_main_context_prepare () from /lib/libglib-2.0.so.0
#9  0x00007f031fb7d108 in ?? () from /lib/libglib-2.0.so.0
#10 0x00007f031fb7d6ec in g_main_context_iteration () from /lib/libglib-2.0.so.0
#11 0x00007f0324376766 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#12 0x00007f032434ba82 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#13 0x00007f032434be5c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#14 0x00007f032425b79b in QThread::exec() () from /usr/lib/libQtCore.so.4
#15 0x00007f02de65082d in ?? () from /usr/lib/kde4/plugins/marble/GpsdPositionProviderPlugin.so
#16 0x00007f032425de35 in ?? () from /usr/lib/libQtCore.so.4
#17 0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#18 0x00007f032351b01d in clone () from /lib/libc.so.6
#19 0x0000000000000000 in ?? ()

Thread 8 (Thread 0x7f02dc9c0710 (LWP 25936)):
#0  0x00007f032183616c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f032425ee8b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f0327c1e8b2 in Digikam::LoadSaveThread::run() () from /usr/lib/libdigikamcore.so.1
#3  0x00007f032425de35 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#5  0x00007f032351b01d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 7 (Thread 0x7f02d99ba710 (LWP 25949)):
#0  0x00007f032183616c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f032425ee8b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f0327c1e8b2 in Digikam::LoadSaveThread::run() () from /usr/lib/libdigikamcore.so.1
#3  0x00007f032425de35 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#5  0x00007f032351b01d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 6 (Thread 0x7f02da1bb710 (LWP 25950)):
#0  0x00007f0321833f05 in pthread_mutex_lock () from /lib/libpthread.so.0
#1  0x00007f031fb7b61b in g_main_context_acquire () from /lib/libglib-2.0.so.0
#2  0x00007f031fb7d085 in ?? () from /lib/libglib-2.0.so.0
#3  0x00007f031fb7d6ec in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0x00007f0324376766 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007f032434ba82 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007f032434be5c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0x00007f032425b79b in QThread::exec() () from /usr/lib/libQtCore.so.4
#8  0x00007f02de65082d in ?? () from /usr/lib/kde4/plugins/marble/GpsdPositionProviderPlugin.so
#9  0x00007f032425de35 in ?? () from /usr/lib/libQtCore.so.4
#10 0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#11 0x00007f032351b01d in clone () from /lib/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7f02db1bd710 (LWP 25951)):
#0  0x00007f032183616c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f032425ee8b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f0327c1e8b2 in Digikam::LoadSaveThread::run() () from /usr/lib/libdigikamcore.so.1
#3  0x00007f032425de35 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#5  0x00007f032351b01d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7f02d3fff710 (LWP 26088)):
#0  0x00007f032183616c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f032425ee8b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f02d85863f6 in KIPIPlugins::LoadRawThumbThread::run() () from /usr/lib/libkipiplugins.so.1
#3  0x00007f032425de35 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#5  0x00007f032351b01d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f02db9be710 (LWP 27971)):
#0  0x00007f0323510103 in poll () from /lib/libc.so.6
#1  0x00007f0317c8d8ce in ?? () from /lib/libresolv.so.2
#2  0x00007f0317c8ba75 in __libc_res_nquery () from /lib/libresolv.so.2
#3  0x00007f0317c8c031 in ?? () from /lib/libresolv.so.2
#4  0x00007f0317c8c2b1 in __libc_res_nsearch () from /lib/libresolv.so.2
#5  0x00007f02c4b26c37 in _nss_dns_gethostbyname4_r () from /lib/libnss_dns.so.2
#6  0x00007f03234f74ac in ?? () from /lib/libc.so.6
#7  0x00007f03234f97a2 in getaddrinfo () from /lib/libc.so.6
#8  0x00007f0324dea1c3 in ?? () from /usr/lib/libQtNetwork.so.4
#9  0x00007f0324ddd109 in QHostInfo::fromName(QString const&) () from /usr/lib/libQtNetwork.so.4
#10 0x00007f03267c30ab in ?? () from /usr/lib/libkio.so.5
#11 0x00007f03267c3682 in ?? () from /usr/lib/libkio.so.5
#12 0x00007f0324253d7f in ?? () from /usr/lib/libQtCore.so.4
#13 0x00007f032425de35 in ?? () from /usr/lib/libQtCore.so.4
#14 0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#15 0x00007f032351b01d in clone () from /lib/libc.so.6
#16 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f02dc1bf710 (LWP 27972)):
#0  0x00007f0323510103 in poll () from /lib/libc.so.6
#1  0x00007f0317c8d8ce in ?? () from /lib/libresolv.so.2
#2  0x00007f0317c8ba75 in __libc_res_nquery () from /lib/libresolv.so.2
#3  0x00007f0317c8c031 in ?? () from /lib/libresolv.so.2
#4  0x00007f0317c8c2b1 in __libc_res_nsearch () from /lib/libresolv.so.2
#5  0x00007f02c4b26c37 in _nss_dns_gethostbyname4_r () from /lib/libnss_dns.so.2
#6  0x00007f03234f74ac in ?? () from /lib/libc.so.6
#7  0x00007f03234f97a2 in getaddrinfo () from /lib/libc.so.6
#8  0x00007f0324dea1c3 in ?? () from /usr/lib/libQtNetwork.so.4
#9  0x00007f0324ddd109 in QHostInfo::fromName(QString const&) () from /usr/lib/libQtNetwork.so.4
#10 0x00007f03267c30ab in ?? () from /usr/lib/libkio.so.5
#11 0x00007f03267c3682 in ?? () from /usr/lib/libkio.so.5
#12 0x00007f0324253d7f in ?? () from /usr/lib/libQtCore.so.4
#13 0x00007f032425de35 in ?? () from /usr/lib/libQtCore.so.4
#14 0x00007f03218318ba in start_thread () from /lib/libpthread.so.0
#15 0x00007f032351b01d in clone () from /lib/libc.so.6
#16 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f032ac3f7c0 (LWP 25646)):
[KCrash Handler]
#5  0x0000000000000000 in ?? ()
#6  0x00007f03253d0a7f in QPainter::begin(QPaintDevice*) () from /usr/lib/libQtGui.so.4
#7  0x00007f03253d1338 in QPainter::QPainter(QPaintDevice*) () from /usr/lib/libQtGui.so.4
#8  0x00007f02d858ccf4 in KIPIPlugins::ImagesListViewItem::setProgressAnimation(QPixmap const&) () from /usr/lib/libkipiplugins.so.1
#9  0x00007f02d858cea6 in KIPIPlugins::ImagesList::slotProgressTimerDone() () from /usr/lib/libkipiplugins.so.1
#10 0x00007f02d858d10c in KIPIPlugins::ImagesList::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkipiplugins.so.1
#11 0x00007f0324360346 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#12 0x00007f032435cba3 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#13 0x00007f032527932c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#14 0x00007f032527f80b in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#15 0x00007f03261ec436 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#16 0x00007f032434d15c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#17 0x00007f0324379ed2 in ?? () from /usr/lib/libQtCore.so.4
#18 0x00007f0324376a48 in ?? () from /usr/lib/libQtCore.so.4
#19 0x00007f031fb796c2 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#20 0x00007f031fb7d538 in ?? () from /lib/libglib-2.0.so.0
#21 0x00007f031fb7d6ec in g_main_context_iteration () from /lib/libglib-2.0.so.0
#22 0x00007f0324376713 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#23 0x00007f032532914e in ?? () from /usr/lib/libQtGui.so.4
#24 0x00007f032434ba82 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#25 0x00007f032434be5c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#26 0x00007f0324350aeb in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#27 0x000000000077ff9b in ?? ()
#28 0x00007f032346ac4d in __libc_start_main () from /lib/libc.so.6
#29 0x00000000004773a9 in _start ()

Reported using DrKonqi
Comment 1 caulier.gilles 2010-10-07 09:00:19 UTC
We need feedback using kipi-plugins 1.4.0

Gilles Caulier
Comment 2 Jens Mueller 2010-11-08 19:00:18 UTC
SVN commit 1194321 by jmueller:

fix crash when current processing item is removed

BUG: 243877
BUG: 240382

 M  +3 -1      NEWS  
 M  +13 -0     common/libkipiplugins/widgets/imageslist.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1194321