fix crash when current processing item is removed

BUG: 243877
BUG: 240382

svn path=/trunk/extragear/graphics/kipi-plugins/; revision=1194321